(https://github.com/vorple/inform6/CHANGES and
https://github.com/vorple/inform7/CHANGES).

The numbers after the items refer to GitHub issues. (inform #xx) refers to issue
number xx in the Inform extensions/libraries repositories.


Release 3.2.3
=============

- Modified the source file structure so that it's easier to include Vorple in
  JavaScript projects with npm
- Command history API is now accessible through vorple.prompt.history in 
  addition to Haven's haven.prompt.history
- Silent or repeating commands are no longer added to the command history
- It's no longer necessary to manually specify autosave and engineColors options
  when initializing Vorple
- Fixed a bug that caused Firefox to sometimes scroll the page to the top when
  clicking links
- Fixed a bug that prevented vorple.audio.isEffectPlaying() from detecting
  currently playing sound effects
- Fixed a bug that caused some commands from not being saved to the command
  history
- Updated jQuery to 3.5.1 and other libraries to their latest versions


Release 3.2.2 (2019-11-19)
==========================

This minor release adds compatibility to the new Borogove editor.

- Added vorple.file.resourceUrl() method that gets a resource file's correct URL
  regardless of where the interpreter is running so that they work when running 
  embedded in Borogove


Release 3.2.1 (2019-11-17)
==========================

This release fixes regression issues after the change of interpreter mainly with
games and libraries that rely heavily on Unicode input and output.

- Added missing tables in some Glulx-level Unicode functions that caused
  interpreter crashes (inform6 #26)
- Added missing Unicode input methods to the Quixe interpreter interface
  (inform6 #26)
- Fixed Inform 6 story file detection
- Fixed sound effect audio elements getting a vorple-music class meant for
  background music only
- Removed obsolete build instructions from the readme

  
Release 3.2 (2019-09-14)
========================
