@@ -16,7 +16,7 @@
     <link rel="stylesheet" type="text/css" href="interpreter/vorple.css">
 </head>
 <body>
-<main id="haven">
+<main id="vorple">
     <div id="loader">
         <h2 id="loader-message">Loading scripts</h2>
         <div id="spinner">V</div>
